# SDA_DGS

./: BuildMat.py  CMakeLists.txt  DistTest.py  Falcon.py  Frodo.py  SDSVP.cpp  SDSVP.py  readme.md  test.cpp
FalconDist/: numberFP.txt  numberSDA.txt
FrodoDist/: Frodo1344FP.txt  Frodo1344SDA.txt  Frodo640FP.txt  Frodo640SDA.txt  Frodo976FP.txt  Frodo976SDA.txt
